# aerial-autonomy-stack

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  Dockerfile.aircraft  Dockerfile.simulated_aircraft  Dockerfile.simulation  LICENSE  NOTES.md  RATIONALE.md  README.md  WIP.md  main.sh  main_deploy.sh  main_sim.sh
.github/workflows/: weekly-aircraft-amd64-build.yml  weekly-aircraft-arm64-build.yml  weekly-build.yml  weekly-simulation-amd64-build.yml
aircraft/: aircraft.yml.erb
aircraft/aircraft_resources/comms/: zenoh_config_air.json5.erb
aircraft/aircraft_resources/patches/: apm_pluginlists.yaml  cancellable_action.py  kiss_icp.rviz  plot_bag.sh
aircraft/aircraft_ws/src/autopilot_interface/: CMakeLists.txt  package.xml
aircraft/aircraft_ws/src/autopilot_interface/src/: ardupilot_interface.cpp  ardupilot_interface.hpp  px4_interface.cpp  px4_interface.hpp
aircraft/aircraft_ws/src/autopilot_interface_msgs/: CMakeLists.txt  package.xml
aircraft/aircraft_ws/src/autopilot_interface_msgs/action/: Land.action  Offboard.action  Orbit.action  Takeoff.action
aircraft/aircraft_ws/src/autopilot_interface_msgs/msg/: OffboardFlag.msg  Template.msg
aircraft/aircraft_ws/src/autopilot_interface_msgs/srv/: SetReposition.srv
aircraft/aircraft_ws/src/offboard_control/: CMakeLists.txt  package.xml
aircraft/aircraft_ws/src/offboard_control/src/: ardupilot_guided.cpp  ardupilot_guided.hpp  px4_offboard.cpp  px4_offboard.hpp
aircraft/aircraft_ws/src/state_sharing/: CMakeLists.txt  package.xml
aircraft/aircraft_ws/src/state_sharing/src/: state_sharing_node.cpp
aircraft_resources/: aircraft.yml.erb
aircraft_resources/comms/: test.py  zenoh_config_air.json5  zenoh_config_air.json5.erb  zenoh_config_air_ardupilot.json5
aircraft_resources/patches/: apm_pluginlists.yaml  kiss_icp.rviz
aircraft_resources/yolo/: yolo-inference.py
aircraft_ws/src/autopilot_interface/: package.xml
aircraft_ws/src/autopilot_interface_msgs/: CMakeLists.txt
aircraft_ws/src/autopilot_interface_msgs/action/: Land.action  Offboard.action  Takeoff.action
aircraft_ws/src/autopilot_interface_msgs/srv/: SetOrbit.srv
aircraft_ws/src/state_sharing/: CMakeLists.txt
aircraft_ws/src/yolo_inference/: setup.py
docker/: Dockerfile.aircraft  Dockerfile.simulation
dockerization/: .dockerignore  Dockerfile.drone_deployed_env  Dockerfile.drone_sitl_env  Dockerfile.simulation_env  docker-compose.deploy.yml  docker-compose.sim.yml  entrypoint-drone.sh  entrypoint-simulation.sh  px4_multi_instance_launcher.sh
docs/: ARDUPILOT_SETUP.md  AVIONICS.md  PREINSTALL.md  PX4_SETUP.md  RATIONALE.md
patches/: QGroundControl.ini
resources/: aircraft_tmuxinator.yml  cpu-inference.py  gz_to_gst_bridge.py  inference.py  simulation_tmuxinator.yml
resources/aircraft_models/: create_ardupilot_models.sh
resources/aircraft_models/iris/: model.sdf
resources/aircraft_models/iris_with_ardupilot/: model.sdf
resources/aircraft_models/standard_vtol/: model.sdf
resources/aircraft_models/unicorn/: model.sdf
resources/aircraft_models/x500/: model.sdf
resources/aircraft_models/zephyr_with_ardupilot/: model.sdf
resources/comms/: emulate_serial_over_tcp.py  gz_to_gst_image_bridge.py
resources/simulation_worlds/: create_ardupilot_world.sh  default.sdf  iris_runway.sdf  iris_world.sdf  zephyr_runway.sdf  zephyr_world.sdf
resources/tmuxinator/: aircraft.yml  aircraft.yml.erb  simulation.yml.erb  simulation_ardupilot_quad.yml  simulation_ardupilot_vtol.yml  simulation_px4_quad.yml  simulation_px4_vtol.yml
resources/yolo/: gz_to_gst_bridge.py  yolo-gpu-inference.py  yolo-inference.py
scripts/: build_deploy.sh  build_sim.sh  deploy_build.sh  deploy_run.sh  deploy_run_hitl.sh  deploy_run_hitl_ssh.sh  run_sim.sh  sim_build.sh  sim_run.sh  sim_run_hitl.sh
scripts/docker/: Dockerfile.aircraft  Dockerfile.simulation
scripts/xterm/: sim_run.sh
simulation/: simulation.yml.erb
simulation/simulation_resources/aircraft_models/: _create_ardupilot_models.sh
simulation/simulation_resources/comms/: zenoh_config_ground.json5
simulation/simulation_resources/patches/: QGroundControl.ini  dds_topics.yaml  load_ulg_to_flight_review.py  plot_logs.sh  px4-v1.16.0.patch
simulation/simulation_resources/simulation_worlds/: _create_ardupilot_world.sh  apple_orchard.sdf  impalpable_greyness.sdf  shibuya_crossing.sdf  swiss_town.sdf
simulation/simulation_ws/src/ground_system_msgs/: package.xml
simulation/simulation_ws/src/ground_system_msgs/msg/: SwarmObs.msg
simulation_resources/: aircraft_tmuxinator.yml  simulation.yml.erb  simulation_tmuxinator.yml
simulation_resources/aircraft_models/: _create_ardupilot_models.sh  create_ardupilot_models.sh
simulation_resources/aircraft_models/iris_with_ardupilot/: model.config  model.sdf
simulation_resources/aircraft_models/sensor_camera/: model.sdf
simulation_resources/aircraft_models/sensor_lidar/: model.sdf
simulation_resources/aircraft_models/standard_vtol/: 5141_gz_aas_standard_vtol  model.sdf
simulation_resources/aircraft_models/x500/: 5140_gz_aas_x500  model.sdf
simulation_resources/aircraft_models/zephyr_with_ardupilot/: model.sdf
simulation_resources/comms/: emulate_serial_over_tcp.py  zenoh_config_ground.json5
simulation_resources/patches/: QGroundControl.ini  dds_topics.yaml  px4-1.15.4.patch
simulation_resources/simulation_worlds/: _create_ardupilot_world.sh  apple_orchard.sdf  create_ardupilot_world.sh  empty_ardupilot.sdf  empty_px4.sdf  impalpable_greyness.sdf  orchard.sdf  shibuya_crossing.sdf  swiss_town.sdf
simulation_resources/simulation_worlds/airstream/: model.config  model.sdf
simulation_resources/simulation_worlds/apple/: model.sdf  procedural_trees.sh
simulation_resources/simulation_worlds/apple_grid/: model.config
simulation_ws/src/ground_system_msgs/: CMakeLists.txt
simulation_ws/src/ground_system_msgs/msg/: DroneObs.msg
supplementary/: AVIONICS.md  PREINSTALL.md  PREINSTALL_UBUNTU.md  PREINSTALL_WSL.md  RATIONALE.md  REQUIREMENTS_UBUNTU.md  REQUIREMENTS_WSL.md  SETUP_AVIONICS.md  WSL.md  WSL_EXPERIMENTAL.md
(+113 files in other folders)
