<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offboard_control</name>
  <version>0.1.0</version>
  <description>PX4 and ArduPilot ROS2 offboard control</description>
  <maintainer email="jacopo.pan@gmail.com">JacopoPan</maintainer>
  <license>MIT License</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>autopilot_interface_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geographiclib</depend>
  <depend>geographic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ground_system_msgs</depend>
  <depend>vision_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
