<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ground_system_msgs</name>
  <version>0.1.0</version>
  <description>Messages for the ground system</description>
  <maintainer email="jacopo.pan@gmail.com">JacopoPan</maintainer>
  <license>MIT License</license>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>
  <!-- <depend>geometry_msgs</depend>  -->
  <!-- <depend>action_msgs</depend> -->
  <!-- <depend>geographic_msgs</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
